// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-sms/tyntect RetrieveMessageStatus should perform successfuly 1`] = `
Ok {
  "value": Object {
    "deliveryStatus": "unknown",
  },
}
`;

exports[`communication/send-sms/tyntect SendMessage should perform successfully 1`] = `
Ok {
  "value": Object {
    "messageId": "26b01d7a-c59b-49b6-bba4-743ef84c0e17",
  },
}
`;
